# simple-api-rust-actix

./: .gitignore  Cargo.toml
.sqlx/: query-02f44fe610b10f6b775ddac5d0b9bfbb89bb9918d028ced13cc461ef9bc8d8d0.json  query-8b27abe214c59caeb5fb125a2e20407ac8267af200b864d06b360a85bf90d583.json
migrations/: 20241013110714_create_user.sql
src/: db.rs  main.rs
src/handlers/: error.rs  greet.rs  mod.rs  notification.rs  search.rs  users.rs
src/middlewares/: auth_middleware.rs  mod.rs
src/models/: mod.rs  notification.rs  user.rs
src/routes/: mod.rs
