[package]
name = "main-feature-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
dotenv = "0.15"
jsonwebtoken = "8.3"  # Remove the feature flag


# Use sqlx version 0.8.x with compatible features
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres"] }

# For sqlx-cli, ensure it matches the same version
sqlx-cli = { version = "0.8", features = ["postgres"] }
