[package]
name = "main-feature-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
dotenv = "0.15"
jsonwebtoken = "8.3"  # Remove the feature flag
chrono = { version = "0.4", features = ["serde"] }  # Enable the serde feature
time = "0.3"  # Use the latest version available
futures = "0.3"      # Add this line
actix-cors = "0.6" # Pastikan untuk menggunakan versi terbaru

# Use sqlx version 0.8.x with compatible features
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "time", "chrono"] }

# For sqlx-cli, ensure it matches the same version
sqlx-cli = { version = "0.8", features = ["postgres"] }
